<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcfcc4"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sango.form_generation.MainActivity"
    tools:showIn="@layout/app_bar_main">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/formnameinput"
            android:gravity="left"
            android:id="@+id/et_formname"
            tools:ignore="RtlHardcoded"
            android:layout_weight="1" />
        <EditText
            android:layout_height="wrap_content"
            android:hint="@string/authornameinput"
            android:layout_width="0dp"
            android:id="@+id/et_formauthor"
            tools:ignore="RtlHardcoded"
            android:layout_weight="1" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableLayout
            android:id="@+id/tablelayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0">

            <TableRow
                android:id="@+id/row1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_input"
                    android:gravity="left"
                    android:layout_weight="0.75"
                    android:id="@+id/et_label1"
                    tools:ignore="RtlHardcoded"
                    />

                <android.support.v7.widget.AppCompatSpinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_field_type"
                    android:id="@+id/et_fieldtype_1"
                    android:layout_weight="0.5"
                    android:entries="@array/fieldtype"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_input"
                    android:id="@+id/et_field_name"
                    android:layout_weight="0.7" />
                <ImageView
                    android:id="@+id/del_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/del"
                    android:contentDescription=""
                    tools:ignore="ContentDescription"
                    android:layout_weight="0.25" />

            </TableRow>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                android:textColor="@color/colorAccent"
                android:text="@string/generate_form"
                android:gravity="center"
                android:textStyle="bold"


                android:background="@android:color/transparent"/>



        </TableLayout>
    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/status" />
</LinearLayout>
